Fixed maven configurations.